test/infer-out/report.txt
#0
test_main.c:230: error: Uninitialized Value
  The value read from BH[_] was never initialized.
  228.             };
  229.             if (l->type==5) {
  230.                 BH[p]+=l->m;
                       ^
  231.             };
  232.         }

#1
test_main.c:261: error: Uninitialized Value
  The value read from BH[_] was never initialized.
  259.       if (Star[i]>=MassLimit) {
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));
                                                                                                         ^
  262.         //printf("%d\n",i);
  263.       }

#2
test_main.c:224: error: Uninitialized Value
  The value read from DM[_] was never initialized.
  222.             };
  223.             if (l->type==1) {
  224.                 DM[p]+=l->m;
                       ^
  225.             };
  226.             if (l->type==4) {

#3
test_main.c:261: error: Uninitialized Value
  The value read from DM[_] was never initialized.
  259.       if (Star[i]>=MassLimit) {
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));
                                                                             ^
  262.         //printf("%d\n",i);
  263.       }

#4
test_main.c:221: error: Uninitialized Value
  The value read from Gas[_] was never initialized.
  219.             Mass[p] += l->m;
  220.             if (l->type==0) {
  221.                 Gas[p]+=l->m;
                       ^
  222.             };
  223.             if (l->type==1) {

#5
test_main.c:261: error: Uninitialized Value
  The value read from Gas[_] was never initialized.
  259.       if (Star[i]>=MassLimit) {
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));
                                                               ^
  262.         //printf("%d\n",i);
  263.       }

#6
test_main.c:261: error: Uninitialized Value
  The value read from Mass[_] was never initialized.
  259.       if (Star[i]>=MassLimit) {
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));
                                                ^
  262.         //printf("%d\n",i);
  263.       }

#7
test_main.c:227: error: Uninitialized Value
  The value read from Star[_] was never initialized.
  225.             };
  226.             if (l->type==4) {
  227.                 Star[p]+=l->m;
                       ^
  228.             };
  229.             if (l->type==5) {

#8
test_main.c:236: error: Uninitialized Value
  The value read from Star[_] was never initialized.
  234.             bigMass = Mass[p];
  235.         }
  236.         if (Star[p]>MassLimit) {
                   ^
  237.             massive_count+=1;
  238.         }

#9
test_main.c:259: error: Uninitialized Value
  The value read from Star[_] was never initialized.
  257.     // write results to file 
  258.     for(i=0;i<count;i++) {
  259.       if (Star[i]>=MassLimit) {
                 ^
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));

#10
test_main.c:261: error: Uninitialized Value
  The value read from Star[_] was never initialized.
  259.       if (Star[i]>=MassLimit) {
  260.         // Write masses to file
  261.         fprintf(f,"%g, %g, %g, %g, %g\n",log10(Mass[i]),log10(Gas[i]),log10(DM[i]),log10(Star[i]),log10(BH[i]));
                                                                                          ^
  262.         //printf("%d\n",i);
  263.       }

Found 11 issues
                Issue Type(ISSUED_TYPE_ID): #
  Uninitialized Value(UNINITIALIZED_VALUE): 11
